# GomorraSQL

./: .gitignore  COMANDI.md  PRESENTAZIONE.md  Proposta progetto.md  README.md  debug_ast.py  demo_generators.py  demo_type_inference.py  gomorrasql_grammar.txt  lexer.csv  main.py  parser.py  pyproject.toml  run_all_examples.py  specifica_sintattica.txt
.hex/: main.tex
.obsidian/: workspace.json
data/: guaglioni.csv  guaglioni_null.csv  ruoli.csv
docs/: AI_USAGE_REPORT.md  SPECIFICA_COMPLETA.md  specifica_lessicale.md  specifica_semantica.md  specifica_sintattica.md
queries/: 01_select_simple.gsql  02_where_complex.gsql  03_join_cartesian.gsql  04_join_with_where.gsql  05_join_inner.gsql  06_null_check_is_null.gsql  07_null_check_is_not_null.gsql  08_comparison_equal.gsql  09_comparison_not_equal.gsql  10_join_advanced.gsql  README.md  example_query.gsql  test_join.gsql
src/: __init__.py  ast_nodes.py  compiler.py  llvm_codegen.py  parser.py  semantic_analyzer.py  transformer.py  visitor.py
tests/: test_compiler.py  test_generators.py  test_llvm_ir_generation.py  test_type_inference.py
